<resources>
    <string name="app_name">NavDrawer</string>
    <string name="legislator_default">Robert White [P-ST]</string>
    <string name="legislator_default_description">Senator, YEAR-Present</string>
    <string name="legislator_image_des">Legislator Profile Image</string>
    <string name="voting_record">Voting Record</string>
    <string name="follow_the_money">Follow the Money</string>
    <string name="bio">Bio</string>
    <string name="ideology">Ideology</string>
    <string name="committees">Committees</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_profile">Legislator Profile</string>
    <string name="home_string">Back to Home</string>
    <string name="server">http://10.0.2.2</string>

    <string name="action_settings">Settings</string>
    <string name="search_default">Search</string>
    <string name="filter_default">Filter</string>
    <string name="search_bills">Search Bills</string>

    <string name="no_action">No Action</string>
    <string name="no_action_date">N/A</string>
    <string name="no_info">None</string>
    <string name="search_next"><![CDATA[>]]></string>
    <string name="search_back"><![CDATA[<]]></string>
    <string name="more_information">More Information</string>
    <string name="money_default">$10,000,000</string>
    <string name="contributor_name_default">Contributor Name</string>
    <string name="column_contributor_name">Contributor Name</string>
    <string name="column_total">Total</string>
    <string name="column_PAC">PAC</string>
    <string name="header_top_contributors">Top Contributors</string>
    <string name="full_text_button">Full Text</string>
</resources>
