<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jacob.navdrawer.NavDrawerActivity">

    <include
        android:id="@+id/legis_header"
        layout="@layout/info_legislator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/votingRecord"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/voting_record"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legis_header" />

    <Button
        android:id="@+id/followTheMoney"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/follow_the_money"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/votingRecord" />

    <Button
        android:id="@+id/bio"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/bio"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/votingRecord" />

    <Button
        android:id="@+id/ideology"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/ideology"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toStartOf="@+id/committees"
        app:layout_constraintStart_toEndOf="@+id/bio"
        app:layout_constraintTop_toTopOf="@+id/bio" />

    <Button
        android:id="@+id/committees"
        android:layout_width="118dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/committees"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ideology" />

    <ListView
        android:id="@+id/newsFeed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ideology" />

</android.support.constraint.ConstraintLayout>
