<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/legis_header"
        layout="@layout/info_legislator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/contributor1"
        layout="@layout/info_contributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/columnName" />

    <include
        android:id="@+id/contributor2"
        layout="@layout/info_contributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contributor1" />

    <include
        android:id="@+id/contributor3"
        layout="@layout/info_contributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contributor2" />

    <Button
        android:id="@+id/moneyMoreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/more_information"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/headerTopContributors"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="#8ce0ff"
        android:gravity="center"
        android:text="@string/header_top_contributors"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legis_header" />

    <TextView
        android:id="@+id/columnPAC"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/column_PAC"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTopContributors" />

    <TextView
        android:id="@+id/columnTotal"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/column_total"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/columnPAC"
        app:layout_constraintEnd_toStartOf="@+id/columnPAC"
        app:layout_constraintTop_toTopOf="@+id/columnPAC" />

    <TextView
        android:id="@+id/columnName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/column_contributor_name"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/columnTotal"
        app:layout_constraintEnd_toStartOf="@+id/columnTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/columnTotal" />

    <TextView
        android:id="@+id/headerTopIndustry"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:background="#8ce0ff"
        android:gravity="center"
        android:text="@string/header_top_contributors"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contributor3" />

    <TextView
        android:id="@+id/columnPAC2"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/column_PAC"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTopIndustry" />

    <TextView
        android:id="@+id/columnTotal2"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/column_total"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/columnPAC2"
        app:layout_constraintEnd_toStartOf="@+id/columnPAC2"
        app:layout_constraintTop_toTopOf="@+id/columnPAC2" />

    <TextView
        android:id="@+id/columnName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/column_contributor_name"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/columnTotal2"
        app:layout_constraintEnd_toStartOf="@+id/columnTotal2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/columnTotal2" />

    <include
        android:id="@+id/industry1"
        layout="@layout/info_contributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/columnName2" />

    <include
        android:id="@+id/industry2"
        layout="@layout/info_contributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industry1" />

    <include
        android:id="@+id/industry3"
        layout="@layout/info_contributor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industry2" />


</android.support.constraint.ConstraintLayout>